Bug #13782: Loading Bar When Submitting a Video not visible enough

--- a/static/css/lights-on.css
+++ b/static/css/lights-on.css
@@ -1318,7 +1318,7 @@ display: none;
     position: fixed;
     width: 100%;
     bottom: -30px;
-    z-index: 100;
+    z-index: 10000;
 }
 
 #load-indicator img {
